# LightRW

./: .gitignore  .gitmodules  Makefile  NOTE.md  README.md
app/metapath/: kernel.cfg  kernel.mk
app/metapath_x4/: .gitignore  kernel.mk
app/node2vec/: kernel.mk
app/node2vec_x4/: kernel.mk
app/thundering/: kernel.cfg  kernel.mk
app/uniform_random_walk/: kernel.mk
host/aie_test/: host_overlay.cpp
host/gp/: dataPrepare.cpp  data_helper.cpp  default_main.cpp  graph.cpp  graph.h  graph_dataflow.cpp  graph_partition.cpp  host_graph_api.h  host_graph_data_structure.h  host_graph_sw.h  para_check.h
host/graph/: graph.cpp  graph.h
host/graph_converter_main/: host.cpp
host/graph_play_ground/: host.cpp
host/graph_reorder/: graph.cpp  graph.h
host/graph_sort/: graph.cpp  graph.h
host/helper/: fpga_kernel.h  helper.cpp  helper.h  (+1 more)
host/xgraph/util/: CMakeLists.txt  command_parser.h  openmp_playground.cpp  play_ground.cpp
host/xgraph/util/prefixsum/: LICENSE  Makefile  barrier.h  data.h  helper_functions.cc  helper_functions.h  my_test.cc  platform.h  singlethread_avx.h  singlethread_avx512_horizontal.cc  singlethread_avx512_horizontal.h  singlethread_avx512_vertical.cc  singlethread_avx512_vertical.h  singlethread_scalar.h  singlethread_sse.h  singlethread_tree.cc  singlethread_tree.h
lib/: common_host.mk
misc/: Strategy.md  auto_host_emu.sh  rmat.m  rmat_test.sh  rmat_test_sef.sh  run_hw_emu.sh  rw_test.sh  test.py  test.sh  test_make.sh  test_set_backaround  test_traverse_para.sh  tool_grep.sh  tool_test.sh  wrs.py
src/: automation.sh  graph_fpga.h
(+347 files in other folders)
